--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   "author": "ShabsCreativeContents",
   "license": "MIT",
   "dependencies": {
-    "connect-mongo": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "validator": "^13.11.0"
   }
 }
